  - removed use of List and ListIterator internally
  - fixed handling of axes and boxes when a coordinate had zero extent
  - changed rgl.viewpoint default to be compatible with r3dDefaults
  - added id return values to primitives and higher level functions, 
    and to rgl.pop(); added rgl.ids() to report on them.
  - updated gl2ps to version 1.3.1, adding support for svg and pgf output formats.
  - added grid3d(), added nticks argument to bbox3d, axis3d and axes3d.
    
v0.69
  - persp3d partially ignored add=TRUE
  - plot3d.qmesh3d did not return result
  - allow selection to use any button
  - allow NA in primitives, surfaces, texts, and sprites
  - report error in OSX if the wrong configure options were used.
  - display was not being updated properly in OSX
  
v0.70
  - OSX now builds two libraries, one for AGL, one for X11
  - resolve entry points at load time, not call time
  - updated gl2ps to version 1.3.2
  - fixed bug in rgl.postscript in Linux, added text support to it
  - tweaked positioning of labels in bounding box decoration
  - snapshot3d wasn't being exported, and snapshots were from the back buffer
  - fixed bug that could cause crash on shutdown
  - moved this file (ChangeLog) to inst directory, so it will be installed,
    and added code to display it to the rgl help topic.

v0.70.572
  - changes to configure script from Laszlo Kajan and Brian Ripley:  should 
    now be much more portable
  - removed deprecated OSX font setting calls
  - texture properties are now returned by material3d()
  - allowed normals and texture coordinates to be specified in triangles and quads
  - normals may be specified in qmesh objects, but (at present) subdivide removes them
  - material3d() now preserves the values of unspecified parameters (as documented,
    but not previously functioning)
  - clear3d() can now reset material properties to the defaults, and
    open3d() does this.
  - minor fix for gcc 4.3 compatibility
  - minor fix for R 2.5+ compatibility